--- a/day1/day1.ipynb
+++ b/day1/day1.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "--- Day 1: Sonar Sweep ---\n",
-    "You're minding your own business on a ship at sea when the overboard alarm goes off! You rush to see if you can help. Apparently, one of the Elves tripped and accidentally sent the sleigh keys flying into the ocean!\n",
+    "--- Day 1: Sonar Sweep --- You're minding your own business on a ship at sea when the overboard alarm goes off! You rush to see if you can help. Apparently, one of the Elves tripped and accidentally sent the sleigh keys flying into the ocean!\n",
     "\n",
     "Before you know it, you're inside a submarine the Elves keep ready for situations like this. It's covered in Christmas lights (because of course it is), and it even has an experimental antenna that should be able to track the keys if you can boost its signal strength high enough; there's a little meter that indicates the antenna's signal strength by displaying 0-50 stars.\n",
     "\n",
@@ -17,33 +16,13 @@
     "\n",
     "For example, suppose you had the following report:\n",
     "\n",
-    "199\n",
-    "200\n",
-    "208\n",
-    "210\n",
-    "200\n",
-    "207\n",
-    "240\n",
-    "269\n",
-    "260\n",
-    "263\n",
-    "This report indicates that, scanning outward from the submarine, the sonar sweep found depths of 199, 200, 208, 210, and so on.\n",
+    "199 200 208 210 200 207 240 269 260 263 This report indicates that, scanning outward from the submarine, the sonar sweep found depths of 199, 200, 208, 210, and so on.\n",
     "\n",
     "The first order of business is to figure out how quickly the depth increases, just so you know what you're dealing with - you never know if the keys will get carried into deeper water by an ocean current or a fish or something.\n",
     "\n",
     "To do this, count the number of times a depth measurement increases from the previous measurement. (There is no measurement before the first measurement.) In the example above, the changes are as follows:\n",
     "\n",
-    "199 (N/A - no previous measurement)\n",
-    "200 (increased)\n",
-    "208 (increased)\n",
-    "210 (increased)\n",
-    "200 (decreased)\n",
-    "207 (increased)\n",
-    "240 (increased)\n",
-    "269 (increased)\n",
-    "260 (decreased)\n",
-    "263 (increased)\n",
-    "In this example, there are 7 measurements that are larger than the previous measurement.\n",
+    "199 (N/A - no previous measurement) 200 (increased) 208 (increased) 210 (increased) 200 (decreased) 207 (increased) 240 (increased) 269 (increased) 260 (decreased) 263 (increased) In this example, there are 7 measurements that are larger than the previous measurement.\n",
     "\n",
     "How many measurements are larger than the previous measurement?"
    ]
