--- a/day4/day4.ipynb
+++ b/day4/day4.ipynb
@@ -101,31 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "winning_numbers = [31, 50, 79, 59, 39, 53, 58, 95, 92, 55, 40, 97, 81, 22, 69, 26, 6, 23, 3, 29, 83, 48, 18, 75, 47, 49, 62, 45, 35, 34, 1, 88, 54, 16, 56, 77, 28, 94, 52, 15, 0, 87, 93, 90, 60, 67, 68, 85, 80, 51, 20, 96, 61, 66, 63, 91, 8, 99, 70, 13, 71, 17, 7, 38, 44, 43, 5, 25, 72, 2, 57, 33, 82, 78, 89, 21, 30, 11, 73, 84, 4, 46, 14, 19, 12, 10, 42, 32, 64, 98, 9, 74, 86, 27, 24, 65, 37, 41, 76]\n",
-      "arr = [31, 5, 70, 8, 38, 63, 14, 91, 22, 67, 17, 47, 93, 52, 69, 29, 33, 66, 64, 19, 35, 63, 17, 48, 25, 58, 33, 14, 32, 87, 90, 66, 16, 4, 98, 72, 19, 74, 39, 29, 40, 29, 44, 17, 56, 98, 83, 62, 25, 91, 20, 60, 42, 66, 34, 77, 16, 8, 6, 50, 13, 6, 58, 39, 3, 15, 69, 5, 81, 65, 0, 85, 72, 7, 60, 42, 45, 64, 47, 53, 94, 21, 67, 0, 2, 75, 77, 15, 38, 25, 49, 99, 76, 35, 69, 4, 42, 96, 86, 84, 46, 7, 74, 65, 99, 12, 4, 38, 30, 90, 78, 94, 22, 15, 72, 52, 11, 67, 59, 3, 18, 17, 63, 53, 16, 76, 55, 5, 33, 82, 60, 51, 29, 99, 87, 95, 88, 15, 75, 61, 10, 24, 79, 28, 64, 43, 21, 48, 45, 85, 80, 71, 68, 39, 57, 50, 47, 60, 3, 62, 82, 92, 58, 16, 76, 90, 74, 61, 2, 72, 43, 69, 84, 38, 0, 4, 5, 64, 49, 78, 79, 60, 28, 45, 47, 2, 93, 89, 56, 18, 54, 97, 55, 91, 68, 58, 87, 37, 88, 35, 42, 76, 25, 15, 6, 34, 33, 88, 43, 10, 27, 26, 78, 66, 62, 14, 1, 65, 95, 54, 14, 0, 46, 72, 83, 2, 62, 76, 65, 85, 19, 18, 57, 45, 87, 51, 32, 37, 61, 34, 9, 75, 56, 60, 53, 81, 41, 55, 86, 54, 29, 85, 92, 6, 97, 46, 5, 0, 70, 3, 3, 15, 61, 94, 62, 7, 12, 10, 84, 66, 18, 33, 91, 19, 11, 22, 57, 16, 80, 26, 1, 69, 46, 98, 19, 7, 63, 56, 9, 3, 66, 38, 40, 49, 72, 0, 42, 23, 75, 89, 33, 59, 17, 15, 62, 96, 84, 2, 27, 63, 55, 3, 0, 89, 19, 73, 56, 93, 12, 87, 31, 56, 33, 3, 55, 52, 87, 57, 44, 89, 6, 5, 15, 53, 62, 51, 61, 35, 13, 4, 15, 84, 95, 88, 96, 18, 93, 14, 49, 40, 46, 1, 50, 64, 69, 80, 3, 19, 87, 9, 71, 68, 18, 81, 95, 26, 45, 24, 42, 73, 62, 36, 5, 61, 98, 99, 31, 55, 8, 1, 0, 73, 19, 12, 72, 22, 27, 59, 71, 26, 28, 66, 54, 87, 8, 2, 20, 60, 35, 32, 44, 41, 93, 76, 24, 33, 15, 14, 78, 49, 81, 67, 74, 73, 54, 23, 75, 10, 18, 3, 94, 95, 52, 23, 55, 14, 35, 44, 0, 49, 50, 60, 59, 54, 90, 67, 17, 81, 4, 37, 38, 29, 8, 79, 91, 98, 1, 68, 86, 13, 95, 46, 55, 36, 90, 42, 69, 7, 0, 93, 82, 5, 67, 40, 61, 16, 56, 68, 55, 20, 13, 15, 75, 28, 45, 17, 86, 85, 10, 2, 98, 73, 72, 43, 32, 41, 56, 46, 85, 7, 31, 69, 86, 21, 37, 40, 33, 57, 15, 39, 83, 18, 90, 75, 17, 73, 32, 88, 51, 99, 5, 23, 60, 47, 35, 42, 37, 86, 82, 14, 17, 47, 7, 54, 65, 83, 33, 11, 85, 16, 27, 75, 60, 90, 44, 69, 71, 73, 38, 46, 57, 79, 76, 91, 96, 20, 13, 34, 0, 21, 5, 47, 60, 62, 55, 29, 44, 59, 58, 78, 83, 30, 7, 1, 90, 2, 11, 41, 3, 27, 33, 10, 63, 75, 0, 38, 96, 76, 87, 67, 63, 19, 42, 56, 35, 89, 87, 13, 21, 23, 4, 16, 64, 78, 25, 92, 41, 10, 66, 68, 56, 76, 37, 18, 38, 27, 17, 50, 60, 23, 0, 6, 9, 8, 30, 93, 58, 99, 16, 46, 40, 77, 4, 96, 55, 21, 30, 24, 81, 58, 41, 91, 56, 46, 20, 78, 82, 29, 87, 67, 59, 33, 4, 18, 2, 52, 54, 96, 46, 72, 3, 43, 20, 97, 87, 55, 9, 80, 84, 76, 2, 25, 44, 64, 93, 35, 17, 84, 14, 48, 21, 73, 89, 62, 53, 54, 38, 59, 69, 45, 71, 96, 56, 57, 47, 39, 25, 15, 29, 65, 44, 3, 36, 30, 92, 59, 97, 86, 48, 74, 51, 91, 75, 25, 72, 56, 9, 21, 88, 32, 58, 24, 82, 48, 95, 53, 68, 20, 43, 84, 68, 75, 33, 39, 0, 65, 45, 27, 36, 71, 2, 91, 10, 82, 44, 41, 11, 42, 17, 26, 61, 36, 56, 6, 72, 10, 62, 77, 99, 73, 37, 38, 60, 7, 44, 43, 81, 59, 29, 19, 63, 49, 13, 31, 59, 76, 62, 83, 69, 24, 57, 40, 20, 41, 2, 55, 50, 60, 46, 15, 87, 90, 97, 53, 85, 67, 7, 71, 1, 22, 48, 82, 15, 21, 17, 91, 99, 57, 28, 94, 24, 25, 44, 95, 55, 97, 9, 18, 71, 37, 13, 52, 30, 3, 79, 14, 81, 62, 98, 22, 49, 90, 17, 65, 59, 42, 15, 14, 91, 55, 67, 58, 13, 61, 79, 32, 92, 28, 16, 72, 73, 47, 39, 94, 93, 53, 95, 71, 66, 40, 65, 37, 15, 61, 63, 50, 57, 8, 99, 90, 6, 45, 79, 9, 82, 12, 42, 38, 31, 71, 48, 5, 35, 81, 25, 63, 2, 90, 64, 22, 62, 56, 60, 29, 47, 33, 75, 77, 86, 7, 90, 34, 85, 3, 0, 16, 71, 44, 11, 40, 18, 19, 73, 67, 66, 85, 37, 10, 62, 46, 11, 40, 83, 69, 57, 1, 81, 48, 36, 6, 99, 0, 41, 81, 68, 31, 27, 30, 12, 62, 54, 43, 58, 36, 10, 55, 61, 69, 97, 22, 59, 18, 91, 86, 87, 20, 57, 61, 15, 99, 31, 32, 23, 89, 64, 96, 79, 47, 97, 19, 17, 46, 19, 20, 67, 29, 4, 8, 52, 18, 13, 34, 82, 73, 71, 95, 35, 28, 33, 42, 15, 16, 78, 99, 61, 81, 84, 72, 12, 11, 17, 62, 76, 63, 96, 42, 89, 64, 10, 32, 18, 21, 63, 89, 95, 5, 79, 19, 29, 82, 77, 59, 13, 3, 31, 46, 80, 37, 97, 78, 75, 9, 94, 11, 93, 27, 10, 2, 89, 32, 64, 52, 42, 56, 23, 20, 70, 78, 45, 76, 16, 98, 0, 94, 28, 13, 48, 90, 30, 43, 20, 9, 14, 39, 89, 4, 15, 63, 91, 45, 41, 55, 44, 2, 38, 14, 19, 72, 75, 95, 35, 6, 70, 7, 1, 29, 83, 79, 90, 96, 32, 29, 42, 60, 85, 93, 16, 41, 11, 90, 46, 13, 26, 19, 79, 30, 72, 56, 63, 18, 25, 71, 26, 35, 80, 21, 11, 24, 48, 29, 64, 66, 74, 83, 84, 60, 44, 30, 95, 20, 29, 60, 31, 2, 51, 78, 32, 45, 70, 6, 59, 33, 16, 26, 11, 38, 49, 74, 39, 46, 58, 91, 95, 21, 61, 52, 30, 2, 83, 19, 89, 9, 41, 64, 28, 23, 62, 55, 43, 60, 81, 15, 33, 4, 51, 97, 88, 70, 76, 38, 58, 28, 67, 3, 6, 22, 57, 41, 53, 31, 29, 42, 12, 64, 23, 0, 14, 28, 99, 63, 79, 9, 75, 73, 3, 45, 93, 52, 43, 54, 15, 70, 19, 3, 47, 60, 46, 93, 16, 87, 41, 30, 88, 9, 26, 45, 28, 49, 73, 98, 57, 30, 65, 22, 99, 21, 36, 47, 70, 83, 31, 73, 61, 77, 94, 93, 91, 26, 13, 87, 13, 58, 63, 4, 5, 89, 11, 39, 12, 43, 75, 97, 15, 56, 21, 0, 23, 66, 62, 70, 37, 25, 82, 80, 58, 89, 30, 91, 75, 40, 87, 50, 78, 4, 55, 0, 54, 64, 52, 96, 61, 57, 42, 74, 88, 48, 8, 13, 81, 69, 7, 97, 16, 23, 18, 55, 11, 46, 68, 39, 37, 85, 59, 41, 3, 29, 91, 87, 65, 18, 70, 78, 9, 80, 97, 19, 1, 75, 58, 13, 62, 8, 80, 34, 72, 6, 40, 57, 85, 82, 48, 84, 79, 29, 70, 21, 41, 5, 33, 32, 58, 21, 50, 7, 34, 71, 93, 35, 77, 43, 79, 55, 57, 12, 45, 95, 38, 9, 29, 37, 57, 26, 2, 22, 87, 4, 53, 17, 75, 25, 70, 62, 3, 9, 86, 33, 58, 50, 72, 27, 16, 15, 71, 64, 37, 56, 84, 32, 54, 99, 73, 20, 60, 19, 22, 70, 69, 83, 79, 48, 94, 38, 0, 31, 43, 58, 22, 93, 2, 88, 56, 13, 90, 68, 46, 95, 32, 59, 89, 42, 94, 60, 26, 63, 21, 64, 81, 47, 36, 32, 93, 20, 16, 10, 68, 39, 75, 99, 82, 27, 24, 31, 35, 82, 49, 16, 98, 90, 8, 64, 25, 87, 54, 76, 2, 22, 7, 50, 44, 94, 1, 31, 72, 28, 76, 93, 20, 4, 35, 54, 49, 30, 59, 32, 53, 62, 99, 52, 92, 75, 1, 75, 51, 22, 61, 83, 58, 63, 9, 5, 85, 43, 69, 8, 62, 93, 84, 31, 21, 82, 99, 6, 70, 73, 65, 53, 29, 31, 78, 61, 37, 90, 54, 64, 20, 35, 97, 44, 1, 10, 73, 50, 53, 24, 15, 56, 94, 82, 31, 40, 65, 79, 92, 70, 57, 95, 21, 74, 55, 3, 44, 42, 78, 31, 33, 69, 71, 24, 12, 7, 23, 8, 10, 9, 11, 68, 93, 28, 94, 63, 87, 53, 75, 85, 34, 52, 37, 49, 11, 72, 2, 86, 66, 17, 61, 46, 13, 96, 18, 99, 50, 76, 71, 10, 4, 99, 46, 39, 23, 94, 12, 73, 5, 70, 96, 43, 55, 61, 67, 18, 51, 88, 97, 58, 36, 12, 90, 53, 86, 5, 42, 6, 95, 57, 19, 34, 26, 1, 77, 78, 61, 17, 79, 97, 29, 65, 21, 55, 19, 88, 74, 62, 73, 76, 89, 33, 50, 30, 12, 22, 18, 94, 15, 17, 69, 37, 91, 30, 13, 67, 25, 84, 95, 90, 27, 82, 20, 56, 62, 4, 58, 19, 17, 83, 14, 82, 48, 36, 5, 46, 20, 50, 60, 92, 52, 85, 95, 34, 31, 53, 89, 47, 3, 15, 2, 10, 59, 76, 5, 24, 14, 30, 37, 77, 57, 48, 16, 9, 73, 94, 62, 1, 32, 85, 13, 52, 75, 34, 93, 24, 95, 51, 86, 35, 22, 72, 0, 46, 96, 88, 67, 80, 84, 34, 39, 11, 37, 47, 29, 63, 57, 86, 78, 64, 5, 32, 38, 69, 55, 87, 91, 26, 89, 87, 51, 43, 22, 68, 74, 62, 88, 38, 28, 92, 4, 39, 96, 97, 73, 72, 40, 83, 35, 5, 41, 45, 57, 94, 61, 31, 59, 47, 81, 89, 69, 25, 3, 36, 15, 93, 19, 49, 37, 14, 96, 55, 43, 6, 22, 21, 50, 47, 78, 40, 51, 91, 59, 87, 28, 93, 86, 44, 3, 54, 71, 82, 70, 88, 14, 43, 63, 76, 78, 81, 61, 22, 84, 65, 9, 29, 15, 28, 5, 45, 12, 19, 64, 93, 83, 40, 7, 99, 20, 30, 85, 67, 22, 21, 59, 76, 42, 1, 46, 8, 69, 27, 67, 68, 88, 35, 83, 14, 53, 85, 82, 29, 61, 73, 39, 74, 38, 32, 50, 9, 75, 66, 63, 3, 68, 15, 17, 98, 81, 29, 52, 88, 58, 2, 87, 96, 49, 12, 26, 89, 92, 69, 90, 50, 74, 40, 0, 87, 19, 47, 65, 42, 17, 3, 33, 28, 47, 64, 43, 73, 32, 49, 65, 42, 95, 93, 36, 78, 34, 96, 79, 10, 39, 54, 15, 17, 53, 32, 41, 16, 54, 47, 56, 69, 31, 0, 42, 66, 88, 9, 43, 38, 21, 8, 19, 98, 78, 43, 38, 75, 36, 62, 64, 45, 31, 96, 16, 46, 93, 11, 57, 56, 27, 3, 73, 74, 66, 23, 39, 13, 40, 85, 68, 50, 97, 37, 77, 28, 48, 29, 51, 84, 95, 1, 70, 78, 51, 74, 68, 89, 49, 54, 8, 83, 86, 65, 99, 28, 82, 57, 32, 81, 13, 66, 3, 94]\n",
-      "bingo_board = [31, 5, 70, 8, 38]\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'int' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14160/2957859730.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     39\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 41\u001b[1;33m             \u001b[0mtmp_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbingo_board\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     42\u001b[0m         \u001b[0mbingo_board\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtmp_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m         \u001b[0mtmp_list\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+      "The fastest board will finish in 29 turns with a score of 25410\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "with open('day4_puzzle_input.txt') as fp:\n",
     "    string = fp.readline().strip()\n",
     "    tmp_string = ''\n",
@@ -142,47 +131,63 @@
     "        string = fp.readline().strip()\n",
     "    while string:\n",
     "        tmp_string = ''\n",
+    "        tmp_list = []\n",
     "        for i in range(len(string)):\n",
     "            if ord(string[i]) != 32:\n",
     "                tmp_string = tmp_string + string[i]\n",
     "            else:\n",
     "                if tmp_string != '':\n",
-    "                    arr.append(int(tmp_string))\n",
+    "                    tmp_list.append(int(tmp_string))\n",
     "                    tmp_string = ''\n",
+    "        else:\n",
+    "            tmp_list.append(int(tmp_string))\n",
+    "        arr.append(tmp_list)\n",
     "        string = fp.readline().strip()\n",
     "        if string == '':\n",
     "            string = fp.readline().strip()\n",
     "\n",
-    "fastest_board = []  # stores how many turns it takes each bingo board to get a bingo\n",
-    "bingo_board = []\n",
-    "x = 0   # variable for building bingo boards appropiately\n",
-    "while True:\n",
-    "    turns = 0   # How many turns each board takes to get a bingp\n",
-    "    x+=5\n",
-    "    print(f\"arr = {arr}\")\n",
-    "    bingo_board = arr[x-5:x]\n",
-    "    print(f\"bingo_board = {bingo_board}\")\n",
-    "    tmp_list = []\n",
-    "    for i in range(5):\n",
-    "        for j in range(5):\n",
-    "            tmp_list.append(bingo_board[j][i])\n",
-    "        bingo_board.append(tmp_list)\n",
-    "        tmp_list = []\n",
-    "    \n",
-    "    bingo = 0\n",
-    "    num = 0\n",
-    "    while True:\n",
-    "        bingo = winning_numbers[num]\n",
-    "        for i in range(10):\n",
-    "            for j in range(5):\n",
-    "                if bingo in bingo_board[i][j]:\n",
-    "                    bingo_board[i][j] = 0\n",
-    "        break\n",
-    "    \n",
-    "    break\n",
+    "bingo_array = np.array(arr)\n",
+    "fastest_board = []  # a list to hold the integer value of how many turns each board takes\n",
+    "ones_array = np.ones(5,dtype='int32')\n",
+    "score = []  # The score of each bingo board\n",
     "\n",
+    "for i in range(int(len(bingo_array)/5)):\n",
+    "    turns = 0   # integer to track how many bingo calls must be made for an individual board to win\n",
+    "    turns2 = 0\n",
+    "    bingo_board_horizontal = np.copy(bingo_array[i*5:i*5+5])\n",
+    "    bingo_board_vertical = np.rot90(bingo_board_horizontal,k=1,axes=(0,1))\n",
+    "    bingo_board = np.concatenate((bingo_board_horizontal,bingo_board_vertical))\n",
+    "    for j in range(len(winning_numbers)):\n",
+    "        break_point = 0\n",
+    "        if winning_numbers[j] in bingo_board:\n",
+    "            turns +=1\n",
+    "            bingo_board[bingo_board - winning_numbers[j] == 0] = -1\n",
+    "            for k in range(len(bingo_board)):\n",
+    "                comparison = np.multiply(bingo_board[k],-1) == ones_array   # checks if a bingo has been achieved\n",
+    "                equal_arrays = comparison.all()\n",
+    "                if equal_arrays:    # If any board has a bingo, saves how many turns it took\n",
+    "                    fastest_board.append(turns+turns2)\n",
+    "                    break_point = 1\n",
+    "                    bingo_board[bingo_board == -1] = 0\n",
+    "                    score.append(np.sum(bingo_board[:5]) * winning_numbers[j])\n",
+    "                    break\n",
+    "        else:\n",
+    "            turns2 +=1\n",
     "\n",
-    "    "
+    "        if break_point == 1:\n",
+    "            break\n",
+    "\n",
+    "d = {}  # dictionary to store boards by the amount of turns it takes to win\n",
+    "for i in range(len(score)):\n",
+    "    d[fastest_board[i]] = score[i]\n",
+    "\n",
+    "for i in range(len(fastest_board)-1):   # organize the boards to find the one that finishes in the quickest time\n",
+    "    if fastest_board[i] < fastest_board[i+1]:\n",
+    "        tmp = fastest_board[i] \n",
+    "        fastest_board[i] = fastest_board[i+1]\n",
+    "        fastest_board[i+1] = tmp\n",
+    "\n",
+    "print(f\"The fastest board will finish in {fastest_board[-1]} turns with a score of {d[fastest_board[-1]]}\")"
    ]
   }
  ],
