completed part 2 of day4

--- a/day4/day4.ipynb
+++ b/day4/day4.ipynb
@@ -189,6 +189,43 @@
     "\n",
     "print(f\"The fastest board will finish in {fastest_board[-1]} turns with a score of {d[fastest_board[-1]]}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- Part Two ---\n",
+    "On the other hand, it might be wise to try a different strategy: let the giant squid win.\n",
+    "\n",
+    "You aren't sure how many bingo boards a giant squid could play at once, so rather than waste time counting its arms, the safe thing to do is to figure out which board will win last and choose that one. That way, no matter which boards it picks, it will win for sure.\n",
+    "\n",
+    "In the above example, the second board is the last to win, which happens after 13 is eventually called and its middle column is completely marked. If you were to keep playing until this point, the second board would have a sum of unmarked numbers equal to 148 for a final score of 148 * 13 = 1924.\n",
+    "\n",
+    "Figure out which board will win last. Once it wins, what would its final score be?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest board will finish in 83 turns with a score of 2730\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(fastest_board)-1):\n",
+    "    if fastest_board[i] > fastest_board[i+1]:\n",
+    "        tmp = fastest_board[i]\n",
+    "        fastest_board[i] = fastest_board[i+1]\n",
+    "        fastest_board[i+1] = tmp\n",
+    "\n",
+    "print(f\"The slowest board will finish in {fastest_board[-1]} turns with a score of {d[fastest_board[-1]]}\")"
+   ]
   }
  ],
  "metadata": {
