--- a/day2/day2.ipynb
+++ b/day2/day2.ipynb
@@ -61,9 +61,20 @@
      "text": [
       "2147104\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "61"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "import gc\n",
     "def dive():\n",
     "    with open(r'C:\\Users\\Emilio\\Documents\\GitHub\\advent_of_code2021\\day2\\day2_puzzle_input.txt') as fp:\n",
     "        d = {'forward':0,'down':0,'up':0}\n",
@@ -84,7 +95,14 @@
     "    horizontal_position = d['forward']\n",
     "    return depth*horizontal_position\n",
     "\n",
-    "print(dive())"
+    "\n",
+    "answer = dive()\n",
+    "print(answer)\n",
+    "\n",
+    "\n",
+    "del answer\n",
+    "gc.collect()\n",
+    "\n"
    ]
   },
   {
@@ -129,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,6 +156,16 @@
      "text": [
       "2044620088\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -169,10 +197,11 @@
     "            line = fp.readline()\n",
     "    return horizontal_position*depth\n",
     "\n",
-    "def main():\n",
-    "    print(dive_with_aim())\n",
+    "x = dive_with_aim()\n",
+    "print(x)\n",
     "\n",
-    "main()"
+    "del x\n",
+    "gc.collect()"
    ]
   }
  ],
@@ -195,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
