--- a/day3/day3.ipynb
+++ b/day3/day3.ipynb
@@ -64,6 +64,8 @@
     }
    ],
    "source": [
+    "import gc\n",
+    "\n",
     "with open('day3_puzzle_input.txt') as fp:\n",
     "    line = fp.readline().strip()\n",
     "    list = []\n",
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +166,16 @@
      "text": [
       "3414905\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "40"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -223,7 +235,9 @@
     "\n",
     "life_support_rating = o2_level * co2_level\n",
     "print(life_support_rating)\n",
-    "\n"
+    "\n",
+    "del line,highest_frequency,lowest_frequency,frequency,i,j,list,gamma_rate,episilon_rate,power_consumption,oxygen_gen_rating,co2_scrub_rating,tmp_list1,k,o2_level,co2_level,life_support_rating\n",
+    "gc.collect()"
    ]
   }
  ],
@@ -246,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
