--- a/day4/day4.ipynb
+++ b/day4/day4.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,6 +114,8 @@
    ],
    "source": [
     "import numpy as np\n",
+    "import gc\n",
+    "\n",
     "\n",
     "with open('day4_puzzle_input.txt') as fp:\n",
     "    string = fp.readline().strip()\n",
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -215,6 +217,16 @@
      "text": [
       "The slowest board will finish in 83 turns with a score of 2730\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -224,7 +236,10 @@
     "        fastest_board[i] = fastest_board[i+1]\n",
     "        fastest_board[i+1] = tmp\n",
     "\n",
-    "print(f\"The slowest board will finish in {fastest_board[-1]} turns with a score of {d[fastest_board[-1]]}\")"
+    "print(f\"The slowest board will finish in {fastest_board[-1]} turns with a score of {d[fastest_board[-1]]}\")\n",
+    "\n",
+    "del string,tmp_string,winning_numbers,i,arr,tmp_list,bingo_array,fastest_board,ones_array,score,turns,turns2,bingo_board_horizontal,bingo_board_vertical,bingo_board,break_point,k,j,comparison,equal_arrays,d,tmp\n",
+    "gc.collect()"
    ]
   }
  ],
