--- a/day5/day5.ipynb
+++ b/day5/day5.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -77,10 +77,21 @@
      "text": [
       "5464\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
+    "import gc\n",
     "\n",
     "with open('day5_puzzle_input.txt') as fp:\n",
     "    line = fp.readline().strip()\n",
@@ -112,9 +123,7 @@
     "        y = array_list[i][1]\n",
     "    if array_list[i][0] > x:\n",
     "        x = array_list[i][0]\n",
-    "\n",
-    "sonar = np.zeros((y+1,x+1)) # zero matrix to represent the sonar \n",
-    "\n",
+    "sonar = np.zeros((y+1,x+1),dtype='int32') # zero matrix to represent the sonar\n",
     "\n",
     "for i in range(len(array_list)-1):\n",
     "    x1 = array_list[i][0]   # value for first horizontal position\n",
@@ -147,7 +156,10 @@
     "    if x >= 2:\n",
     "        danger_zone +=1\n",
     "\n",
-    "print(danger_zone)\n"
+    "print(danger_zone)\n",
+    "\n",
+    "del line, array_list,string,tmp_list,arr,arr2,x,y,i,sonar,x1,x2,y1,y2,increase_range,lower_range,upper_range,danger_zone\n",
+    "gc.collect()"
    ]
   }
  ],
